Update from https://github.com/Labae/BehaviorTree/commit/5852fc9f39d67a80b17a63842d0e79440dc4d4ea

--- a/toc.html
+++ b/toc.html
@@ -16,7 +16,7 @@
                     <a href="manual/manual-sample.html" name="manual/toc.html" title="Developer Manual">Developer Manual</a>
                 </li>
                 <li>
-                    <a href="api/BehaviorTree.Scripts.Editor.html" name="api/toc.html" title="Scripting API">Scripting API</a>
+                    <a>Scripting API</a>
                 </li>
           </ul>
       </div>
